# glitor

./: .gitignore  README.md  get-glitor.sh  manual-install.sh  pyproject.toml  requirements.txt  start.sh  start_local.sh
glitor/: config.py  main.py
tests/: test_glitor.py
