[tool.poetry]
name = "glitor"
version = "0.1.0"
description = ""
authors = ["Mosleh Uddin <mosleh@gigalogy.com>"]

[tool.poetry.dependencies]
python = ">= 3.7, <= 3.9"
fastapi = "^0.71.0"
docker = "^5.0.3"
fastapi-utils = "^0.2.1"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
